Lift up data table styling, make sure horizontal scroll is cohesive, bug smashing

--- a/packages/editor/src/scss/_data-table.scss
+++ b/packages/editor/src/scss/_data-table.scss
@@ -13,20 +13,3 @@
     width: 30%;
   }
 }
-
-.data-table {
-  tr {
-    border-bottom: none !important;
-    border-right: none !important;
-
-    th {
-      background: #565656;
-    }
-  
-    th, 
-    td {
-      border-bottom: solid 1px #E5E5E5;
-      border-right: solid 1px #E5E5E5
-    }
-  }
-}
