--- a/packages/map/src/scss/editor-panel.scss
+++ b/packages/map/src/scss/editor-panel.scss
@@ -97,7 +97,6 @@
     background: #fff;
     width: $editorWidth;
     overflow-y: overlay;
-    overflow-x: hidden;
     position: fixed;
     z-index: 7;
     display: flex;
@@ -645,14 +644,11 @@
 
   @include breakpointClass(md) {
     .editor-panel:not(.hidden) + .cdc-map-inner-container {
-      margin-left: $editorWidth;
-    }
-    .editor-panel.hidden + .cdc-map-inner-container h1.map-title {
-      padding-left: 3em;
+      padding-left: $editorWidth;
     }
     .waiting {
       background-color: #fff;
-      margin-left: $editorWidth;
+      padding-left: $editorWidth;
     }
   }
 }
